# kaataa

./: .gitignore  default.nix  hie.yaml  rover.cabal
mars-rover/clojure/: CHANGELOG.md  shell.nix
mars-rover/clojure/src/rover/: core.clj
mars-rover/clojure/test/rover/: core_test.clj
mars-rover/go/: default.nix  go.mod  main.go  main_test.go
mars-rover/hs/: CHANGELOG.md  Main.hs  default.nix  hie.yaml  result  result-2  rover.cabal
mars-rover/hs/src/: Rover.hs  RoverParser.hs  RoverTypes.hs
mars-rover/hs/test/Rover/: RoverSpec.hs
mars-rover/java/: build.gradle.kts  gradle-env.json
mars-rover/java/src/main/java/mars/rover/: Library.java  Parser.java  Rover.java
mars-rover/java/src/test/java/mars/rover/: LibraryTest.java  ParserTest.java  RoverTest.java
mars-rover/kotlin/: build.gradle.kts  default.nix  settings.gradle.kts
mars-rover/kotlin/src/main/kotlin/mars/rover/: Rover.kt
mars-rover/kotlin/src/test/kotlin/mars/rover/: RoverTest.kt
mars-rover/nodejs/: package-lock.json  package.json  rover.js  shell.nix  test.js
mars-rover/ocaml/: .merlin  .ocamlformat  dune  rover.ml  shell.nix
mars-rover/ocaml/test/: .merlin  dune  test_rover.ml
mars-rover/purescript/: shell.nix  spago.dhall
mars-rover/purescript/src/: Rover.purs
mars-rover/purescript/test/: Main.purs
mars-rover/rust/: Cargo.toml  default.nix  shell.nix
mars-rover/rust/.direnv/: cache-.2349.6460602eec5  drv
mars-rover/rust/src/: main.rs  rover.rs
mars-rover/scala/: build.sbt  default.nix
mars-rover/scala/src/main/scala/: CubeCalculator.scala  Rover.scala
mars-rover/scala/src/test/scala/: CubeCalculatorTest.scala  RoverTest.scala
nix/: sources.json
src/: Rover.hs
test/Rover/: RoverSpec.hs
