cabal-version:       >=1.10
name:                rover
version:             0.1.0.0
license-file:        LICENSE
author:              Tobias Pflug
maintainer:          tobias.pflug@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Rover
                     , RoverParser
                     , RoverTypes
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010

executable main
  hs-source:           Main.hs
  build-depends:       base >=4.13 && <4.14
                     , rover
                     , bifunctors
  default-language:    Haskell2010
  main-is:             Main.hs

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  other-modules:       Rover.RoverSpec
  build-depends:       base >=4.13 && <4.14
                     , hspec
                     , rover
                     , hedgehog
                     , hspec-hedgehog
