cabal-version:       2.2
name:                rover
version:             0.1.0.0
license-file:        LICENSE
author:              Tobias Pflug
maintainer:          tobias.pflug@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common-options
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -Wno-name-shadowing

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Rover
                     , RoverParser
                     , RoverTypes
  build-depends:       base >=4.13 && <4.14

executable main
  import:              common-options
  build-depends:       base >=4.13 && <4.14
                     , rover
                     , bifunctors
  main-is:             Main.hs

test-suite tests
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  other-modules:       Rover.RoverSpec
  build-depends:       base >=4.13 && <4.14
                     , hspec
                     , rover
                     , hedgehog
                     , hspec-hedgehog
